add function stubs for merkletree verification and element list mutation

--- a/util.html
+++ b/util.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-
+  <script src="/build/merkletree.bundle.js"></script>
   <script src="/build/util.bundle.js"></script>
+
   <script type="text/javascript">
 
     //window.cm = new ConnectionManager("ws://10.0.9.161:8088");
